added menu order

--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -2,10 +2,16 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dashboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="at.kuchel.kuchelapp.RecipeListActivity">
+
+    <include
+        layout="@layout/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <!-- standard front -->
     <android.support.design.widget.AppBarLayout
