--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -7,6 +7,13 @@
     android:fitsSystemWindows="true"
     tools:context="at.kuchel.kuchelapp.RecipeListActivity">
 
+
+    <include
+        layout="@layout/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
