--- a/app/src/main/res/menu/drawer_activity.xml
+++ b/app/src/main/res/menu/drawer_activity.xml
@@ -13,6 +13,9 @@
         <item
             android:id="@+id/nav_myrecipes"
             android:title="@string/myrecipes" />
+        <item
+            android:id="@+id/nav_newrecipe"
+            android:title="@string/newrecipe" />
     </group>
 
     <!-- example extension
