added drawer with basic design

--- a/app/src/main/res/menu/drawer_activity.xml
+++ b/app/src/main/res/menu/drawer_activity.xml
@@ -18,8 +18,8 @@
             android:title="@string/newrecipe" />
     </group>
 
-    <!-- example extension
-    <item android:title="Communicate">
+
+    <item android:title="Sonstiges">
         <menu>
             <item
                 android:id="@+id/nav_share"
@@ -29,5 +29,5 @@
                 android:title="Send" />
         </menu>
     </item>
-    -->
+
 </menu>
