--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -17,7 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <include layout="@layout/recipe_list" />
+
+        <include
+            layout="@layout/recipe_list"
+            android:layout_height="wrap_content" />
     </FrameLayout>
 
 
