--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginTop="20dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="at.kuchel.kuchelapp.RecipeListActivity"
     tools:listitem="@layout/recipe_list_content" />
