--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#637f00</color>
     <color name="colorMenuDark">#86b200</color>
     <color name="colorMenuLight">#bfff00</color>
+    <color name="colorYellowGrain">#fff200</color>
 
     <color name="colorAccent">#FF4081</color>
 </resources>
