modified appearance at tilt

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,8 @@
         <item name="android:windowAnimationStyle">@null</item>
     </style>
 
+    <style name="titletextsize" parent="@style/Base.TextAppearance.AppCompat.Title">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
