--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             app:contentScrim="?attr/colorPrimary"
             app:toolbarId="@+id/toolbar">
 
