--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -49,7 +49,7 @@
             app:layout_anchorGravity="bottom|center" />
 
         <Button
-            android:id="@+id/button_create_recipes"
+            android:id="@+id/play"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -59,9 +59,25 @@
             android:backgroundTint="@android:color/holo_green_light"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
-            android:text="@string/newrecipe"
+            android:text="@string/myrecipes"
             app:layout_anchor="@+id/textView"
             app:layout_anchorGravity="bottom|center" />
+
+           <Button
+            android:id="@+id/stop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="@android:color/holo_green_light"
+            android:paddingBottom="20dp"
+            android:paddingTop="20dp"
+            android:text="@string/myrecipes"
+            app:layout_anchor="@+id/textView"
+            app:layout_anchorGravity="bottom|center" />
+
 
     </LinearLayout>
 
