modified tilt styling of dashboard modified databasemanager modified security/globalparams

--- a/app/src/main/res/layout-land/dashboard.xml
+++ b/app/src/main/res/layout-land/dashboard.xml
@@ -9,86 +9,71 @@
 
     <!-- standard front -->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="385dp"
-        android:orientation="vertical"
-        app:layout_anchor="@+id/textView"
-        app:layout_anchorGravity="bottom|center">
-
-        <Button
-            android:id="@+id/button_recipes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
-            android:text="@string/recipes"
-            app:layout_anchor="@+id/textView"
-            app:layout_anchorGravity="bottom|center" />
-
-        <Button
-            android:id="@+id/button_myrecipes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
-            android:text="@string/myrecipes"
-            app:layout_anchor="@+id/textView"
-            app:layout_anchorGravity="bottom|center" />
-
-        <Button
-            android:id="@+id/button_create_recipes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
-            android:text="@string/newrecipe"
-            app:layout_anchor="@+id/textView"
-            app:layout_anchorGravity="bottom|center" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="270dp"
-        android:fontFamily="@font/orangejuice"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="@string/welcome"
-        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
-        android:textSize="38sp"
-        android:textStyle="italic"
-        app:layout_anchor="@+id/imageView"
-        app:layout_anchorGravity="bottom|center" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="Kuchel_welcome_image"
-        app:srcCompat="@drawable/lunch" />
-
     <include
         layout="@layout/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/orangejuice"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/welcome"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
+            android:textSize="50sp"
+            android:textStyle="italic"
+            app:layout_anchor="@+id/imageView"
+            app:layout_anchorGravity="bottom|center" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical"
+            app:layout_anchor="@+id/textView"
+            app:layout_anchorGravity="bottom|center">
+
+            <Button
+                android:id="@+id/button_recipes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:backgroundTint="@android:color/holo_green_light"
+                android:paddingBottom="20dp"
+                android:paddingTop="20dp"
+                android:text="@string/recipes"
+                app:layout_anchor="@+id/textView"
+                app:layout_anchorGravity="bottom|center" />
+
+            <Button
+                android:id="@+id/button_myrecipes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:backgroundTint="@android:color/holo_green_light"
+                android:paddingBottom="20dp"
+                android:paddingTop="20dp"
+                android:text="@string/myrecipes"
+                app:layout_anchor="@+id/textView"
+                app:layout_anchorGravity="bottom|center" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
