--- a/app/src/main/res/layout/dialog_signin.xml
+++ b/app/src/main/res/layout/dialog_signin.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <ImageView
-        android:src="@drawable/icon"
+        android:src="@drawable/ic_launcher_background"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:scaleType="center"
