--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,7 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.wegls.myapplication.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/login_button"
@@ -12,9 +10,10 @@
         android:title="Logout"
         app:showAsAction="never" />
 
-    <!--  template for further use
-    <item android:id="@+id/courses" android:icon="@drawable/course"
-        android:title="@string/courses" android:showAsAction="ifRoom|withText"/>
-    -->
+    <!-- <item android:id="@+id/courses"
+               android:icon="@drawable/course"
+               android:title="@string/courses"
+               android:showAsAction="ifRoom|withText"/>  -->
+
 
 </menu>
