--- a/app/src/main/res/layout/recipe_detail.xml
+++ b/app/src/main/res/layout/recipe_detail.xml
@@ -5,37 +5,66 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@drawable/textbackgorund"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:paddingBottom="10dp"
+        android:paddingLeft="40dp"
         android:paddingTop="10dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="93dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/DurationTitle"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/duration"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textViewDuration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/textfield" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="97dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
                 android:id="@+id/DifficultyTitle"
-                android:layout_width="361dp"
+                android:layout_width="767dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/difficulty"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewDifficulty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="@string/textfield" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/CreatorTitle"
@@ -45,37 +74,13 @@
                 android:text="@string/creator"
                 android:textStyle="bold" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textViewDuration"
-                android:layout_width="42dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/textfield" />
-
-            <TextView
-                android:id="@+id/textViewDifficulty"
-                android:layout_width="29dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/textfield" />
-
             <TextView
                 android:id="@+id/textViewCreator"
-                android:layout_width="37dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/textfield" />
-
         </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
@@ -91,6 +96,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical">
+
+    </LinearLayout>
 
 </LinearLayout>
