--- a/app/src/main/res/layout/toolbar_detailed.xml
+++ b/app/src/main/res/layout/toolbar_detailed.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.AppBarLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_bar_detailed"
     android:fitsSystemWindows="true"
@@ -17,6 +18,7 @@
         app:toolbarId="@+id/toolbar">
 
         <android.support.v7.widget.Toolbar
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/toolbar_detailed"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -24,4 +26,5 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     </android.support.design.widget.CollapsingToolbarLayout>
+
 </android.support.design.widget.AppBarLayout>
