--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="385dp"
         android:orientation="vertical"
-        app:layout_anchor="@+id/textView"
+        app:layout_anchor="@+id/welcome_title"
         app:layout_anchorGravity="bottom|center">
 
         <Button
@@ -30,7 +30,7 @@
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:text="@string/recipes"
-            app:layout_anchor="@+id/textView"
+            app:layout_anchor="@+id/welcome_title"
             app:layout_anchorGravity="bottom|center" />
 
         <Button
@@ -45,7 +45,7 @@
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:text="@string/myrecipes"
-            app:layout_anchor="@+id/textView"
+            app:layout_anchor="@+id/welcome_title"
             app:layout_anchorGravity="bottom|center" />
 
         <Button
@@ -60,7 +60,7 @@
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:text="@string/myrecipes"
-            app:layout_anchor="@+id/textView"
+            app:layout_anchor="@+id/welcome_title"
             app:layout_anchorGravity="bottom|center" />
 
            <Button
@@ -75,12 +75,12 @@
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:text="@string/myrecipes"
-            app:layout_anchor="@+id/textView"
+            app:layout_anchor="@+id/welcome_title"
             app:layout_anchorGravity="bottom|center" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/welcome_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
