--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_recipe_detail"
     android:fitsSystemWindows="true"
     tools:context="at.kuchel.kuchelapp.RecipeDetailActivity"
     tools:ignore="MergeRootFrame">
