--- a/app/src/main/res/layout/recipe_detail.xml
+++ b/app/src/main/res/layout/recipe_detail.xml
@@ -63,7 +63,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="70dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -100,7 +100,8 @@
         android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingLeft="40dp">
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp">
 
     </LinearLayout>
 
