--- a/app/src/main/res/layout/nav_header_drawer.xml
+++ b/app/src/main/res/layout/nav_header_drawer.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorYellowGrain"
+        android:background="@color/colorMenuDark"
         android:gravity="bottom"
         android:padding="16dp"
         android:text="@string/menu"
